[gd_scene load_steps=2 format=3 uid="uid://fidget_main_menu"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")
game_name = "Fidget Tap"
game_scene = "res://scenes/game.tscn"
primary_color = Color(0.384, 0.773, 0.827, 1)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.14, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -280.0
offset_right = 250.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 56
text = "FIDGET TAP"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "Tap. Relax. Repeat."
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "Lifetime Taps: 0
Best Session: 0
Fastest Streak: 0 taps/sec"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "TAP MODE"

[node name="ZenButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ZEN MODE"

[node name="CreditsLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "Made with Godot 4.5"
horizontal_alignment = 1

[connection signal="pressed" from="VBox/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBox/ZenButton" to="." method="_on_zen_pressed"]
